@@ -59,23 +59,7 @@ our %S = (%S,
     'spa' => [ 6, 'ori' ],
     'ori' => [ 7, 'spa' ],
   },
-  age_ratings     => {
-    -1 => [ 'Unknown' ],
-    0  => [ 'All ages' ,'CERO A' ],
-    6  => [ '6+' ],
-    7  => [ '7+' ],
-    8  => [ '8+' ],
-    9  => [ '9+' ],
-    10 => [ '10+' ],
-    11 => [ '11+' ],
-    12 => [ '12+', 'CERO B' ],
-    13 => [ '13+' ],
-    14 => [ '14+' ],
-    15 => [ '15+', 'CERO C' ],
-    16 => [ '16+' ],
-    17 => [ '17+', 'CERO D' ],
-    18 => [ '18+', 'CERO Z' ],
-  },
+  age_ratings     => [undef, 0, 6..18],
   release_types   => [qw|complete partial trial|],
   platforms       => [qw|win dos lin mac dvd gba msx nds nes p98 psp ps1 ps2 ps3 drc sat sfc wii xb3 oth|],
   media           => {
