@@ -6,6 +6,8 @@ git - ?
 	- Added [code] tag to bb2html()
 	- Tweaked Multi's idlequote timings
 	- Added :SUBSUB: macro to the doc pages
+	- Allow NULL values for releases_rev.minage
+	- Made age ratings translatable
 
 2.8 - 2009-10-24
 	- Converted relation graphs to use inline SVG
